tests/toy/pos/000081_cdrc2.toylang
program a = { if a == a then while a do sleep else sleep; } .
