tests/toy/neg/000266_mutation.toylang
program a = { do if a then sleep; } .
